Fix obs IDs, jupyter permissions, documentation

--- a/all_containers/server-fdp/templates/dataset.ttl.html
+++ b/all_containers/server-fdp/templates/dataset.ttl.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <META http-equiv=Content-Type content="text/html; charset=UTF-8">
-<title>Exported from Notepad++</title>
+<title>Example: Dataset 1</title>
 <style type="text/css">
 span {
 	font-family: 'Courier New';
